--- a/bgx/dashboard/bjx/package.json
+++ b/bgx/dashboard/bjx/package.json
@@ -54,6 +54,7 @@
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "colorbrewer": "^1.3.0",
     "d3": "^3.5.17",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
