--- a/bgx/dashboard/bjx/package.json
+++ b/bgx/dashboard/bjx/package.json
@@ -62,6 +62,7 @@
     "react": "^16.6.3",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.3",
+    "react-json-pretty": "^1.7.9",
     "react-redux": "^5.1.1",
     "react-table": "^6.8.6",
     "react-vis-force": "^0.3.1",
