--- a/bgx/dashboard/bjx/package.json
+++ b/bgx/dashboard/bjx/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Bjx",
-  "version": "1.0.0",
+  "name": "BGX_Dashboard",
+  "version": "0.3.2",
   "description": "",
   "main": ".front/index.jsx",
   "scripts": {
@@ -50,6 +50,9 @@
     "@coreui/coreui": "^2.0.9",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/react": "^2.0.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.10",
+    "@fortawesome/free-solid-svg-icons": "^5.6.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.1.3",
@@ -57,7 +60,9 @@
     "colorbrewer": "^1.3.0",
     "d3": "^3.5.17",
     "html-webpack-plugin": "^3.2.0",
+    "i": "^0.3.6",
     "jquery": "^3.3.1",
+    "npm": "^6.5.0",
     "popper.js": "^1.14.5",
     "react": "^16.6.3",
     "react-chartjs-2": "^2.7.4",
