--- a/bgx/dashboard/bjx/package.json
+++ b/bgx/dashboard/bjx/package.json
@@ -56,6 +56,7 @@
     "axios": "^0.18.0",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
     "colorbrewer": "^1.3.0",
     "d3": "^3.5.17",
