--- a/bgx/dashboard/bjx/package.json
+++ b/bgx/dashboard/bjx/package.json
@@ -55,7 +55,10 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
     "babel-preset-es2015": "^6.24.1",
+    "base64-js": "^1.3.0",
     "bootstrap": "^4.1.3",
+    "borc": "^2.0.4",
+    "cbor": "^4.1.3",
     "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
     "colorbrewer": "^1.3.0",
