--- a/bgx/dashboard/bjx/package.json
+++ b/bgx/dashboard/bjx/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --mode=development"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "babel": {
     "presets": [
       "@babel/preset-env",
