--- a/bgx/dashboard/bgx/package.json
+++ b/bgx/dashboard/bgx/package.json
@@ -66,6 +66,7 @@
     "html-webpack-plugin": "^3.2.0",
     "i": "^0.3.6",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "npm": "^6.5.0",
     "popper.js": "^1.14.5",
     "react": "^16.6.3",
