--- a/bgx/docker/docker-compose-net2-reg-pbft-aws.yaml
+++ b/bgx/docker/docker-compose-net2-reg-pbft-aws.yaml
@@ -121,7 +121,7 @@ services:
       - ../..:/project/${BGX_TOP}
     container_name: smart-bgt-tp-python-bgx2
     depends_on:
-      - validator-bgx-2
+      - validator-2
     command: |
       bash -c "
         bgx/bin/protogen
