--- a/bgx/docker/docker-compose-net2-reg-pbft-aws.yaml
+++ b/bgx/docker/docker-compose-net2-reg-pbft-aws.yaml
@@ -45,34 +45,34 @@ services:
       "
     stop_signal: SIGKILL
 
-#  bgt-tp-python-2:
-#    build:
-#      context: ../..
-#      dockerfile: bgx/families/bgt_python/Dockerfile-${DISTR}
-#      args:
-#        - http_proxy
-#        - https_proxy
-#        - no_proxy
-#        - BGX_TOP=bgx
-#    image: bgt-tp-python-bgx2:${ISOLATION_ID}
-#    environment:
-#    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx2
-#    networks:
-#    - network1
-#    volumes:
-#      - ../..:/project/${BGX_TOP}
-#    container_name: bgt-tp-python-bgx2
-#    depends_on:
-#      - validator-2
-#    command: |
-#      bash -c "
-#        bgx/bin/protogen
-#        cd bgx/families/bgt_python
-#        python3 setup.py clean --all
-#        python3 setup.py build
-#        ../../bin/bgt-tp-python -vv -C tcp://validator-2:4006
-#      "
-#    stop_signal: SIGKILL
+  bgt-tp-python-2:
+    build:
+      context: ../..
+      dockerfile: bgx/families/bgt_python/Dockerfile-${DISTR}
+      args:
+        - http_proxy
+        - https_proxy
+        - no_proxy
+        - BGX_TOP=bgx
+    image: bgt-tp-python-bgx2:${ISOLATION_ID}
+    environment:
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx2
+    networks:
+    - network1
+    volumes:
+      - ../..:/project/${BGX_TOP}
+    container_name: bgt-tp-python-bgx2
+    depends_on:
+      - validator-2
+    command: |
+      bash -c "
+        bgx/bin/protogen
+        cd bgx/families/bgt_python
+        python3 setup.py clean --all
+        python3 setup.py build
+        bgt-tp-python -vv -C tcp://validator-2:4006
+      "
+    stop_signal: SIGKILL
 
 #  bgx-registry-2:
 #    build:
